# ece586-riscv-sim

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  a.mem  a.out  file  test
.github/workflows/: rust.yml
doc/: debug.md
programs/: .gitignore  .test.s.swo  Makefile  call_subroutine.c  call_subroutine.mem  checker.c  echo.c  linker.ld  loop_print.c  make_mem.sh  simple_test_mem  simple_test_mem.mem  simple_test_mem.s  test.mem  test.mem.nf  test.s  test_file.mem  test_file.s  test_mem  test_mem.c  test_mem.elf  test_mem.mem  test_mem.s
programs/jpg_decode/: jpg_decode.c  need_bytes.s
programs/lib/: libremu.c  libremu.h  libsim.s
programs/test/: lbu_test.s  ld_str.mem  run_all_programs.sh
programs2/: checker_no_mul.mem  linker.ld
programs2/jpg_decode/: need_bytes.s
programs2/lib/: libstartup.s
programs2/test/: run_all_programs.sh
proptest-regressions/: machine.txt
src/: api.rs  debugger.rs  decode.rs  environment.rs  machine.rs  main.rs  opcode.rs  register.rs  statetransfer.rs  webui.rs
src/devices/: framebuffer.rs  mod.rs  serial.rs
src/environment/: filedescriptor.rs  mod.rs
src/machine/: memory.rs  mod.rs
src/machine/instruction/: integer_base.rs  mod.rs  parse.rs
src/machine/instruction_fail/: mod.rs  parse.rs
src/machine/instruction_fail/extended/: mod.rs
src/machine/regfile/: mod.rs  register.rs
src/machine/stages/: execute.rs  mod.rs
src/old/: decode_old.rs  old_machine.rs  opcode_old.rs
src/webui/: index.html
src/webui/js/: codemirror.js
src/webui_static/: app.html
src/webui_static/css/: extra.css
test/: run_all_programs.sh
testing/: CMakeLists.txt  README.md  addtest.sh  buildtests.sh  runtests.sh  testPlan.md
testing/branchJump/: .gitignore  CMakeLists.txt  branchJumpTest.cpp
testing/branchJump/testResources/assembly/: beq_false_ne.s  beq_true.s  blt_false_diff_msb.s  blt_false_eq.s  blt_false_matching_msb.s  (+9 more)
testing/integer/: .gitignore  CMakeLists.txt  integerTest.cpp
testing/load/: .gitignore  CMakeLists.txt  expected_load_byte_unsigned.txt  loadTest.cpp  load_byte_unsigned.mem
testing/load/testResources/: .gitignore
testing/load/testResources/assembly/: load_byte_unsigned.s
testing/load/testResources/expected/: expected_load_byte_unsigned.txt
testing/loadStore/: .gitignore  CMakeLists.txt  loadStoreTest.cpp
testing/testFramework/: CMakeLists.txt  testFramework.cpp  testFramework.h
testing/testGenerator/: .gitignore  CMakeLists.txt  main.cpp  testGenerator.cpp  testGenerator.h
webui/: index.html
webui/css/: codemirror.css  extra.css
webui/js/: extra.js
(+157 files in other folders)
